# iTop4412Simple

./: .gitignore  README.md  native.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jiangyt/simple/itop4412/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jiangyt/simple/itop4412/: FFmpegStreamActivity.java  FFmpegUvcStreamActivity.java  ItopModuleActivity.java  MainActivity.java  PlayerActivity.java  RtmpActivity.java
app/src/main/java/com/jiangyt/simple/itop4412/camera/: CameraProxy.java  ICamera.java
app/src/main/res/layout/: activity_ffmpeg_stream.xml  activity_ffmpeg_uvc_stream.xml  activity_itop_module.xml  activity_main.xml  activity_player.xml  activity_rtmp.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jiangyt/simple/itop4412/: ExampleUnitTest.java
ffmpeg/: .gitignore  build.gradle  yuv简介
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: CMakeLists.txt
ffmpeg/src/main/cpp/player/: CMakeLists.txt  ffmpeg_player.cpp  ffmpeg_player.h
ffmpeg/src/main/cpp/rtmp/: CMakeLists.txt  ffmpeg_rtmp.cpp  ffmpeg_rtmp.h
ffmpeg/src/main/cpp/stream/: CMakeLists.txt  h264_publish.cpp  h264_publish.h  logger.h  native_publish.cpp  native_publish.h  video_publish.h
ffmpeg/src/main/cpp/uvc/: CMakeLists.txt  callback.h  ffmpeg_convert.cpp  ffmpeg_convert.h  h264_publish.cpp  h264_publish.h  native_publish.cpp  native_publish.h  uvc_camera.cpp  uvc_camera.h  uvc_device.cpp  uvc_device.h  video_publish.cpp  video_publish.h
ffmpeg/src/main/jniLibs/arm64-v8a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ffmpeg/src/main/jniLibs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
gradle/wrapper/: gradle-wrapper.properties
libitop/: build.gradle
libitop/src/main/: AndroidManifest.xml
libitop/src/main/cpp/: CMakeLists.txt
libitop/src/main/cpp/l9110s/: CMakeLists.txt  itop_l9110s.c  itop_l9110s.h
libitop/src/main/cpp/motor/: CMakeLists.txt  itop_step_motor.c  itop_step_motor.h
libitop/src/main/cpp/relay/: CMakeLists.txt  itop_relay.c  itop_relay.h
libitop/src/main/cpp/rifd/: CMakeLists.txt  itop_rfid.c  itop_rfid.h  spidev_test.h
libitop/src/main/cpp/uvc/: CMakeLists.txt  itop_uvc.c  itop_uvc.h
libitop/src/main/cpp/uvc/libavcodec/: old_codec_ids.h
libyuv/: build.gradle
libyuv/src/main/: AndroidManifest.xml
libyuv/src/main/cpp/: CMakeLists.txt
